crates/pandalang/src/snapshots/pandalang__eval__tests__evals@fun__apply_body.panda.snap
---
source: crates/pandalang/src/eval.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/fun/apply_body.panda
---
Ok(
    Fun {
        fun: Fun {
            patt: Id {
                name: "f",
            },
            body: Fun(
                Fun {
                    patt: Id {
                        name: "x",
                    },
                    body: App(
                        App {
                            fun: Var(
                                Var {
                                    name: "f",
                                },
                            ),
                            arg: Var(
                                Var {
                                    name: "x",
                                },
                            ),
                        },
                    ),
                },
            ),
        },
        env: "<opaque>",
    },
)
