crates/pandalang/src/snapshots/pandalang__eval__tests__evals@fun__id.panda.snap
---
source: crates/pandalang/src/eval.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/fun/id.panda
---
Ok(
    Fun {
        fun: Fun {
            patt: Id {
                name: "x",
                typ: Base {
                    name: "Int",
                },
            },
            body: Var(
                Var {
                    name: "x",
                },
            ),
        },
        env: "<opaque>",
    },
)
