crates/pandalang/src/snapshots/pandalang__eval__tests__evals@fun__nested.panda.snap
---
source: crates/pandalang/src/eval.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/fun/nested.panda
---
Ok(
    Fun {
        fun: Fun {
            arg: "x",
            body: Fun(
                Fun {
                    arg: "y",
                    body: BinOp(
                        BinOp {
                            left: Var(
                                Var {
                                    name: "x",
                                },
                            ),
                            right: Var(
                                Var {
                                    name: "y",
                                },
                            ),
                            kind: Add,
                        },
                    ),
                },
            ),
        },
        env: "<opaque>",
    },
)
